name:                scheme
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Tom Wadeson <tom@tomwadeson.com>
copyright:           Tom Wadeson <tom@tomwadeson.com>
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , parsec == 3.1.9
  default-language:    Haskell2010

executable scheme-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , scheme
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tomwadeson/scheme
